--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,20 @@
 <html>
 <head>
 <title>Inverted Index Search Application</title>
+<link rel="stylesheet" href="main.css">
     </head>
 <body>
+    <div id="wrapper">
+        <header id = "header">
+<h1>Inverted Index </h1>
+
+            </header>
+            <div>
+<!--<h1>Delores Diei</h1>-->
+                </div>
+
+        </div>
+
 
 </body>
 
