save index.html file

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 <body>
     <div id="wrapper">
         <header id = "header">
-<h1>Inverted Index </h1>
+<h1>Inverted Index App </h1>
 
             </header>
             <div>
