--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,43 @@
 <!DOCTYPE html>
-<html>
+<html lang='en'>
 <head>
-<title>Inverted Index Search Application</title>
-<link rel="stylesheet" href="main.css">
-    </head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content='width=device-width, initial-scale=1, shrink-to-fit=no' />
+  <meta http-equiv="x-ua-compatible" content='ie=edge' />
+  <title>Inverted Index Application</title>
+  <!--<link rel='stylesheet' href='css/bootstrap.min.css' type='text/css' />-->
+  <!--<link rel='stylesheet' href='css/font-awesome.min.css' type="text/css" />-->
+  <link rel='stylesheet' href='css/main.css' type='text/css' />
+</head>
 <body>
-    <div id="wrapper">
-        <header id = "header">
-<h1>Inverted Index App </h1>
-
-            </header>
+    <div>
+        <div>
+        <header>
             <div>
-<!--<h1>Delores Diei</h1>-->
-                </div>
+            <h1>Inverted Index</h1>
+            </div>
+                <div>
+                    <div>
+<input type="text" name="search" placeholder="Search..">
+<button>Search</button>
+</div>
+    <div>
+        <button>About</button>   
+         </div>
+         </div>
+        </header>
+            <main>
+<h1 id = "demo"> </h1>
 
-        </div>
+                </main>
+            </div>
+    </div>
+    <footer>
 
+    </footer>
+
+    </div>
+<script src='js/inverted-index.js' type="text/javascript"></script>
 
 </body>
 
