--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang='en' ng-app="invertedIndexApp">
+<html lang='en'>
 
 <head>
     <meta charset="utf-8">
@@ -16,11 +16,9 @@
 
 </head>
 
-<body ng-controller="invertedController">
-
-    <header>
-
-        <nav class="navbar navbar-inverse bg-faded header">
+<body>
+     <header>
+         <nav class="navbar navbar-inverse bg-faded header">
             <div class="row">
                 <div class="col-lg-4" id="title">
                     <h3>Inverted Index App</h3>
@@ -33,89 +31,87 @@
           	                    </button>
                             <div class="dropdown-menu dropdown-menu-right">
                                 <a class="dropdown-item" href="#">--All--</a>
-                                <a class="dropdown-item" href="#">Books.json</a>
                             </div>
                         </div>
                     </div>
                     <span class="input-group-btn">
                             <button class="btn btn-secondary" type="button"><i class="fa fa-search" aria-hidden="true"></i></button>
                         </span>
+                    <button type="button" class="btn btn-info btn-lg about" data-toggle="modal" data-target="#myModal">About</button>
                 </div>
             </div>
-        </nav>
+
+            </nav>
     </header>
     <br />
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-lg-4">
-                <div id="about">
-                    <h4>About this App</h4>
-                </div>
-                <div id="text">
-                    <p>Inverted index is a method which is designed to allow very fast full-text searches. It consists of a list of all the unique words that appear in any document, and for each word, a list of the documents in which it appears.This predetermined
-                        lists help form an index which is queried when searching for a string of words in the documents.</p>
-                </div>
-                <hr>
-                <div id="usage">
-                    <h6>Usage</h6>
-                    Uploads
-                    <ul class="list-unstyled">
-                        <li>Upload JSON file</li>
-                        <li>Click Create index</li>
-                    </ul>
-                </div>
-                <div id="searchterms">
-                    <h6>Search</h6>
-                    <ul class="list-unstyled">
-                        <li>Enter search terms</li>
-                        <li>Click search</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="col-lg-8">
-                <div class="test">
-                    <div>
-                        <button id="upload">
-
-                        <label class="btn btn-default btn-file">
-                      <i class="fa fa-upload" aria-hidden="true"></i>
-                      Upload File <input type="file" multiple accept=".json" hidden onchange="uploadFile()" id="upload-input" />
+    <div class="alert alert-danger alert-dismissible" role="alert" id="alert-div" hidden>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+             Invalid JSON File!
+    </div>
+    <div class="container-fluid main">
+        <div class ="upload-select-create">
+            <div>
+                <button id="upload">
+                    <label class="btn btn-default btn-file">
+                        <i class="fa fa-upload" aria-hidden="true"></i>
+                        Upload File <input type="file" multiple accept=".json" hidden onchange="uploadFile()" id="upload-input" />
                     </label>
-                    </button>
-                    </div>
-                    &nbsp;&nbsp;&nbsp;
-                    <div class="dropdown">
-                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      --Select File--
-                    </button>
-                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                        </div>
-                    </div>
-                    &nbsp;&nbsp;&nbsp;
-                    <button type="button" class="btn btn-primary left-space">Create Index</button>
-                </div>
-                <table class="table table-hover">
-                  <thead>
-              <tr>
-                <th> Keywords </th>
-                <th>Doc 1</th>
-                <th>Doc 2</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>a</td>
-                <td></td>
-              </tr>
-            </tbody>
-                </table>
+                </button>
             </div>
+            &nbsp;&nbsp;&nbsp;
+            <div class="styled-select blue semi-square">
+                <select>
+                    <option selected>-- Select File --</option>
+                </select>
+            </div>
+            &nbsp;&nbsp;&nbsp;
+            <button type="button" class="btn btn-primary left-space" id="left-space" onclick="someFunction()">Create Index</button>
+        </div>
+        <div id="tableDiv">
+                
         </div>
     </div>
+
+            <!-- Modal -->
+<div id="myModal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title about-app">About this App</h4>
+      </div>
+      <div class="modal-body">
+        <div id="text">
+            <p>Inverted index is a method which is designed to allow very fast full-text searches. It consists of a list of all the unique words that appear in any document, and for each word, a list of the documents in which it appears.This predetermined
+                lists help form an index which is queried when searching for a string of words in the documents.</p>
+        </div>
+         <hr>
+         <div id="usage">
+            <h6>Usage</h6>
+                Uploads
+                <ul class="list-unstyled">
+                    <li>Upload JSON file</li>
+                    <li>Click Create index</li>
+                </ul>
+        </div>
+        <div id="searchterms">
+            <h6>Search</h6>
+                <ul class="list-unstyled">
+                    <li>Enter search terms</li>
+                    <li>Click search</li>
+                </ul>
+         </div>  
+      </div>
+
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+     
+  </div>
+</div>
+</div>
 
     <script src="js/inverted-index.js"></script>
     <script src="js/app.js"></script>
